# cubers

./: .travis.yml  Cargo.toml  README.md
src/: bench.rs  cube.rs  display.rs  hash.rs  lib.rs  main.rs  sym.rs  tee.rs
src/solve/: mod.rs  phase1.rs  phase2.rs  solver.rs  util.rs
src/solve/phase1/: ctwist.rs  etwist.rs  flip.rs  mod.bak.rs  mod.rs  twist.rs  udslice.rs
src/solve/phase2/: cperm.rs  cpermcoset.rs  eperm.rs  mod.rs  p2move.rs  udslice.rs
