[package]
name = "cubers"
version = "0.1.0"
authors = ["cookie-s <cookie-s@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
strum = "0.15"
strum_macros = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
num-traits = "0.2"
num-derive = "0.2"
lazy_static = "1.3.0"

[profile.release]
debug = true
